# Algorithms-DataStructures-C

./: .gitignore  CMakeLists.txt
BinarySearchTree/: BinarySearchTree.c  BinarySearchTree.h  BinarySearchTreeTests.c  InsertionBST.c  bst.c  bst.h  delete_bst.c  insert_bst.c  search_bst.c  tests_bst.c
